[gd_scene load_steps=7 format=2]

[ext_resource path="res://hud/wood_theme.tres" type="Theme" id=1]
[ext_resource path="res://hud/jukebox/JukeboxPanel.gd" type="Script" id=2]
[ext_resource path="res://hud/font_big.tres" type="DynamicFont" id=3]
[ext_resource path="res://hud/jukebox/SongEntry.tscn" type="PackedScene" id=4]
[ext_resource path="res://utility_nodes/JukeBox.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="JukeboxPanel" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1152.0
margin_bottom = -637.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 5
size_flags_vertical = 5
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 9.0
margin_right = 120.0
margin_bottom = 86.0
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 112.0
margin_bottom = 18.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 61.0
margin_bottom = 16.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Jukebox "
align = 1

[node name="Skip" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 65.0
margin_right = 79.0
margin_bottom = 18.0
text = ">|"

[node name="Show" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 83.0
margin_right = 112.0
margin_bottom = 18.0
text = "Show"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 112.0
margin_bottom = 28.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 10

[node name="Title2" type="Label" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 112.0
margin_bottom = 41.0
text = "Playlist"
align = 1
valign = 1

[node name="Playlist" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 41.0
margin_right = 112.0
margin_bottom = 54.0
custom_constants/separation = 0

[node name="SongEntry" parent="VBoxContainer/Playlist" instance=ExtResource( 4 )]
margin_right = 112.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 112.0
margin_bottom = 64.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 10

[node name="Title3" type="Label" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 112.0
margin_bottom = 77.0
text = "Unlocked:"
align = 1
valign = 1

[node name="DisabledList" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 77.0
margin_right = 112.0
margin_bottom = 77.0
custom_constants/separation = 0

[node name="MoveTween" type="Tween" parent="."]

[node name="JukeBox" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Skip" to="." method="_on_Skip_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Show" to="." method="_on_Show_pressed"]
